add black and isort hooks for notebooks

--- a/tutorials/experiment_design_01.ipynb
+++ b/tutorials/experiment_design_01.ipynb
@@ -50,10 +50,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "# some python imports that will be used throughout the tutorial\n",
     "import numpy as np\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import pint\n",
     "import xarray as xr\n",
@@ -69,9 +69,10 @@
     "# importing the weldx package with prevalent default abbreviations\n",
     "import weldx\n",
     "import weldx.geometry as geo\n",
-    "from weldx import Q_, get_groove\n",
+    "from weldx import Q_\n",
     "from weldx import LocalCoordinateSystem as LCS\n",
-    "from weldx.welding.util import sine, lcs_coords_from_ts"
+    "from weldx import get_groove\n",
+    "from weldx.welding.util import lcs_coords_from_ts, sine"
    ]
   },
   {
