--- a/tutorials/geometry_01_profiles.ipynb
+++ b/tutorials/geometry_01_profiles.ipynb
@@ -25,10 +25,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mpl_toolkits.mplot3d import Axes3D  # noqa: F401 unused import\n",
+    "import copy\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import copy\n",
+    "from mpl_toolkits.mplot3d import Axes3D  # noqa: F401 unused import\n",
     "\n",
     "import weldx.geometry as geo\n",
     "import weldx.transformations as tf"
@@ -123,16 +124,25 @@
    "outputs": [],
    "source": [
     "# create arc segments\n",
-    "arc_segment_0_cw = geo.ArcSegment.construct_with_points([-1, 0], [0, 1], point_center=[0, 0], arc_winding_ccw=False)\n",
-    "arc_segment_0_ccw = geo.ArcSegment.construct_with_points([-1, 0], [0, 1], point_center=[0, 0], arc_winding_ccw=True)\n",
+    "arc_segment_0_cw = geo.ArcSegment.construct_with_points(\n",
+    "    [-1, 0], [0, 1], point_center=[0, 0], arc_winding_ccw=False\n",
+    ")\n",
+    "arc_segment_0_ccw = geo.ArcSegment.construct_with_points(\n",
+    "    [-1, 0], [0, 1], point_center=[0, 0], arc_winding_ccw=True\n",
+    ")\n",
     "\n",
     "# rasterize segments\n",
     "data_arc_segment_0_cw = arc_segment_0_cw.rasterize(0.1)\n",
     "data_arc_segment_0_ccw = arc_segment_0_ccw.rasterize(0.1)\n",
     "\n",
     "# plot data\n",
-    "plt.plot(data_arc_segment_0_cw[0], data_arc_segment_0_cw[1], 'o', label=\"clockwise\")\n",
-    "plt.plot(data_arc_segment_0_ccw[0], data_arc_segment_0_ccw[1], 'ro', label=\"counter clockwise\")\n",
+    "plt.plot(data_arc_segment_0_cw[0], data_arc_segment_0_cw[1], \"o\", label=\"clockwise\")\n",
+    "plt.plot(\n",
+    "    data_arc_segment_0_ccw[0],\n",
+    "    data_arc_segment_0_ccw[1],\n",
+    "    \"ro\",\n",
+    "    label=\"counter clockwise\",\n",
+    ")\n",
     "plt.grid()\n",
     "plt.legend()\n",
     "plt.axis(\"equal\")"
@@ -156,8 +166,12 @@
    "outputs": [],
    "source": [
     "# create arc segments\n",
-    "arc_segment_1_rcp = geo.ArcSegment.construct_with_radius([0, 0], [1, 1], radius=1, center_left_of_line=False, arc_winding_ccw=True)\n",
-    "arc_segment_1_lcp = geo.ArcSegment.construct_with_radius([0, 0], [1, 1], radius=1, center_left_of_line=True, arc_winding_ccw=True)\n",
+    "arc_segment_1_rcp = geo.ArcSegment.construct_with_radius(\n",
+    "    [0, 0], [1, 1], radius=1, center_left_of_line=False, arc_winding_ccw=True\n",
+    ")\n",
+    "arc_segment_1_lcp = geo.ArcSegment.construct_with_radius(\n",
+    "    [0, 0], [1, 1], radius=1, center_left_of_line=True, arc_winding_ccw=True\n",
+    ")\n",
     "\n",
     "# rasterize segments\n",
     "data_arc_segment_1_rcp = arc_segment_1_rcp.rasterize(0.1)\n",
@@ -172,7 +186,7 @@
     "plt.plot(data_arc_segment_1_lcp[0], data_arc_segment_1_lcp[1], \"bo\")\n",
     "plt.plot(center_point_right[0], center_point_right[1], \"rx\", label=\"right center point\")\n",
     "plt.plot(center_point_left[0], center_point_left[1], \"bx\", label=\"left center point\")\n",
-    "plt.plot([0,1],[0,1], \"g\", label = \"start point -> end point\")\n",
+    "plt.plot([0, 1], [0, 1], \"g\", label=\"start point -> end point\")\n",
     "plt.grid()\n",
     "plt.legend(loc=\"lower left\")\n",
     "plt.axis(\"equal\")"
@@ -198,20 +212,22 @@
    "outputs": [],
    "source": [
     "# create some segments\n",
-    "segment_0 = geo.LineSegment.construct_with_points([0,0], [0,1])\n",
-    "segment_1 = geo.LineSegment.construct_with_points([0,1], [1,1])\n",
-    "segment_2 = geo.ArcSegment.construct_with_points([1,1], [3,1], point_center=[2,1], arc_winding_ccw=False)\n",
-    "segment_3 = geo.LineSegment.construct_with_points([3,1], [4,1])\n",
-    "segment_4 = geo.LineSegment.construct_with_points([4,1], [4,0])\n",
-    "segment_5 = geo.LineSegment.construct_with_points([4,0], [0,0])\n",
+    "segment_0 = geo.LineSegment.construct_with_points([0, 0], [0, 1])\n",
+    "segment_1 = geo.LineSegment.construct_with_points([0, 1], [1, 1])\n",
+    "segment_2 = geo.ArcSegment.construct_with_points(\n",
+    "    [1, 1], [3, 1], point_center=[2, 1], arc_winding_ccw=False\n",
+    ")\n",
+    "segment_3 = geo.LineSegment.construct_with_points([3, 1], [4, 1])\n",
+    "segment_4 = geo.LineSegment.construct_with_points([4, 1], [4, 0])\n",
+    "segment_5 = geo.LineSegment.construct_with_points([4, 0], [0, 0])\n",
     "\n",
     "\n",
     "# create a shape\n",
     "shape_0 = geo.Shape([segment_0, segment_1])\n",
     "\n",
     "# add more segments to the shape\n",
-    "shape_0.add_segments(segment_2)              # single segment\n",
-    "shape_0.add_segments([segment_3, segment_4, segment_5]) # list of segments"
+    "shape_0.add_segments(segment_2)  # single segment\n",
+    "shape_0.add_segments([segment_3, segment_4, segment_5])  # list of segments"
    ]
   },
   {
@@ -232,8 +248,8 @@
     "shape_0_data_clipped = shape_0.rasterize(10000)\n",
     "\n",
     "# plot data\n",
-    "plt.plot(shape_0_data[0], shape_0_data[1], 'bx-', label=\"raster width = 0.1\")\n",
-    "plt.plot(shape_0_data_clipped[0], shape_0_data_clipped[1], 'ro-', label=\"clipped\")\n",
+    "plt.plot(shape_0_data[0], shape_0_data[1], \"bx-\", label=\"raster width = 0.1\")\n",
+    "plt.plot(shape_0_data_clipped[0], shape_0_data_clipped[1], \"ro-\", label=\"clipped\")\n",
     "plt.grid()\n",
     "plt.legend(loc=\"upper left\")\n",
     "plt.axis(\"equal\")"
@@ -286,7 +302,7 @@
     "data_shape_1 = shape_1.rasterize(0.05)\n",
     "\n",
     "# plot\n",
-    "plt.plot(data_shape_1[0], data_shape_1[1], 'rx')\n",
+    "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\")\n",
     "plt.axis(\"equal\")"
    ]
   },
@@ -309,13 +325,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shape_2 = shape_1.translate([-2,3])\n",
+    "shape_2 = shape_1.translate([-2, 3])\n",
     "\n",
     "# rasterize data\n",
     "data_shape_2 = shape_2.rasterize(0.05)\n",
     "\n",
-    "plt.plot(data_shape_1[0], data_shape_1[1], 'rx')\n",
-    "plt.plot(data_shape_2[0], data_shape_2[1], 'bx')\n",
+    "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\")\n",
+    "plt.plot(data_shape_2[0], data_shape_2[1], \"bx\")\n",
     "plt.axis(\"equal\")"
    ]
   },
@@ -333,13 +349,13 @@
    "outputs": [],
    "source": [
     "# create a transformation matrix which distorts and rotates the shape\n",
-    "angle = np.pi/6\n",
+    "angle = np.pi / 6\n",
     "s = np.sin(angle)\n",
     "c = np.cos(angle)\n",
     "\n",
-    "distortion_matrix = np.array([[2, 0],[0,5]])\n",
+    "distortion_matrix = np.array([[2, 0], [0, 5]])\n",
     "rotation_matrix = np.array([[c, -s], [s, c]])\n",
-    "transformation_matrix = np.matmul(rotation_matrix,distortion_matrix)\n",
+    "transformation_matrix = np.matmul(rotation_matrix, distortion_matrix)\n",
     "\n",
     "# get transformed shape\n",
     "shape_3 = shape_1.transform(transformation_matrix)\n",
@@ -348,9 +364,9 @@
     "data_shape_3 = shape_3.rasterize(0.05)\n",
     "\n",
     "# plot all shapes\n",
-    "plt.plot(data_shape_1[0], data_shape_1[1], 'rx')\n",
-    "plt.plot(data_shape_2[0], data_shape_2[1], 'bx')\n",
-    "plt.plot(data_shape_3[0], data_shape_3[1], 'gx')\n",
+    "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\")\n",
+    "plt.plot(data_shape_2[0], data_shape_2[1], \"bx\")\n",
+    "plt.plot(data_shape_3[0], data_shape_3[1], \"gx\")\n",
     "plt.axis(\"equal\")"
    ]
   },
@@ -372,13 +388,13 @@
     "# reflect across the y axis\n",
     "shape_4 = shape_1.reflect(reflection_normal=[1, 0])\n",
     "\n",
-    "# rasterize \n",
+    "# rasterize\n",
     "data_shape_4 = shape_4.rasterize(0.05)\n",
     "\n",
     "# plot all shapes\n",
-    "plt.plot(data_shape_1[0], data_shape_1[1], 'rx', label=\"original\")\n",
-    "plt.plot(data_shape_4[0], data_shape_4[1], 'bx', label=\"reflected\")\n",
-    "plt.plot([0, 0], [-1, 2], 'y--', label=\"line of reflection\")\n",
+    "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\", label=\"original\")\n",
+    "plt.plot(data_shape_4[0], data_shape_4[1], \"bx\", label=\"reflected\")\n",
+    "plt.plot([0, 0], [-1, 2], \"y--\", label=\"line of reflection\")\n",
     "plt.legend()\n",
     "plt.axis(\"equal\")"
    ]
@@ -392,13 +408,13 @@
     "# reflect across the horizontal line with y = 2\n",
     "shape_5 = shape_1.reflect(reflection_normal=[0, 1], distance_to_origin=2)\n",
     "\n",
-    "# rasterize \n",
+    "# rasterize\n",
     "data_shape_5 = shape_5.rasterize(0.05)\n",
     "\n",
     "# plot all shapes\n",
-    "plt.plot(data_shape_1[0], data_shape_1[1], 'rx', label=\"original\")\n",
-    "plt.plot(data_shape_5[0], data_shape_5[1], 'bx', label=\"reflected\")\n",
-    "plt.plot([-1, 2], [2, 2], 'y--', label=\"line of reflection\")\n",
+    "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\", label=\"original\")\n",
+    "plt.plot(data_shape_5[0], data_shape_5[1], \"bx\", label=\"reflected\")\n",
+    "plt.plot([-1, 2], [2, 2], \"y--\", label=\"line of reflection\")\n",
     "plt.legend(loc=\"lower left\")\n",
     "plt.axis(\"equal\")"
    ]
@@ -410,15 +426,15 @@
    "outputs": [],
    "source": [
     "# reflect across a line with slope 1 containing the points (0,1) and (0.5, 1.5)\n",
-    "shape_6 = shape_1.reflect(reflection_normal=[-1, 1], distance_to_origin=1/np.sqrt(2))\n",
+    "shape_6 = shape_1.reflect(reflection_normal=[-1, 1], distance_to_origin=1 / np.sqrt(2))\n",
     "\n",
-    "# rasterize \n",
+    "# rasterize\n",
     "data_shape_6 = shape_6.rasterize(0.05)\n",
     "\n",
     "# plot all shapes\n",
-    "plt.plot(data_shape_1[0], data_shape_1[1], 'rx', label=\"original\")\n",
-    "plt.plot(data_shape_6[0], data_shape_6[1], 'bx', label=\"reflected\")\n",
-    "plt.plot([-1, 2], [0, 3], 'y--', label=\"line of reflection\")\n",
+    "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\", label=\"original\")\n",
+    "plt.plot(data_shape_6[0], data_shape_6[1], \"bx\", label=\"reflected\")\n",
+    "plt.plot([-1, 2], [0, 3], \"y--\", label=\"line of reflection\")\n",
     "plt.grid()\n",
     "plt.legend(loc=\"upper right\")\n",
     "plt.axis(\"equal\")"
@@ -442,14 +458,14 @@
     "point_1 = [0.5, 1.5]\n",
     "shape_7 = shape_1.reflect_across_line(point_0, point_1)\n",
     "\n",
-    "# rasterize \n",
+    "# rasterize\n",
     "data_shape_7 = shape_7.rasterize(0.05)\n",
     "\n",
     "# plot all shapes\n",
-    "plt.plot(data_shape_1[0], data_shape_1[1], 'rx', label=\"original\")\n",
-    "plt.plot(data_shape_7[0], data_shape_7[1], 'bx', label=\"reflected\")\n",
-    "plt.plot([point_0[0], point_1[0]], [point_0[1], point_1[1]], 'co', label=\"points\")\n",
-    "plt.plot([-1, 2], [0, 3], 'y--', label=\"line of reflection\")\n",
+    "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\", label=\"original\")\n",
+    "plt.plot(data_shape_7[0], data_shape_7[1], \"bx\", label=\"reflected\")\n",
+    "plt.plot([point_0[0], point_1[0]], [point_0[1], point_1[1]], \"co\", label=\"points\")\n",
+    "plt.plot([-1, 2], [0, 3], \"y--\", label=\"line of reflection\")\n",
     "plt.grid()\n",
     "plt.legend(loc=\"upper right\")\n",
     "plt.axis(\"equal\")"
@@ -473,14 +489,19 @@
     "point_1 = [2, -4.5]\n",
     "shape_8 = shape_1.reflect_across_line(point_0, point_1)\n",
     "\n",
-    "# rasterize \n",
+    "# rasterize\n",
     "data_shape_8 = shape_8.rasterize(0.05)\n",
     "\n",
     "# plot all shapes\n",
-    "plt.plot(data_shape_1[0], data_shape_1[1], 'rx', label=\"original\")\n",
-    "plt.plot(data_shape_8[0], data_shape_8[1], 'bx', label=\"reflected\")\n",
-    "plt.plot([point_0[0], point_1[0]], [point_0[1], point_1[1]], 'co', label=\"points\")\n",
-    "plt.plot([point_0[0], point_1[0]], [point_0[1], point_1[1]], 'y--', label=\"line of reflection\")\n",
+    "plt.plot(data_shape_1[0], data_shape_1[1], \"rx\", label=\"original\")\n",
+    "plt.plot(data_shape_8[0], data_shape_8[1], \"bx\", label=\"reflected\")\n",
+    "plt.plot([point_0[0], point_1[0]], [point_0[1], point_1[1]], \"co\", label=\"points\")\n",
+    "plt.plot(\n",
+    "    [point_0[0], point_1[0]],\n",
+    "    [point_0[1], point_1[1]],\n",
+    "    \"y--\",\n",
+    "    label=\"line of reflection\",\n",
+    ")\n",
     "plt.grid()\n",
     "plt.legend(loc=\"lower left\")\n",
     "plt.axis(\"equal\")"
@@ -504,7 +525,7 @@
     "# create shapes\n",
     "shape_9 = geo.Shape()\n",
     "shape_9.add_line_segments([[0, 1], [1.5, 1], [3, 0.25], [3, -1], [0, -1], [0, 1]])\n",
-    "shape_10 = shape_9.reflect(reflection_normal=[1,0], distance_to_origin=3.5)\n",
+    "shape_10 = shape_9.reflect(reflection_normal=[1, 0], distance_to_origin=3.5)\n",
     "\n",
     "# create profile\n",
     "profile_0 = geo.Profile(shape_9)\n",
@@ -514,7 +535,7 @@
     "data_profile_0 = profile_0.rasterize(0.1)\n",
     "\n",
     "# plot\n",
-    "plt.plot(data_profile_0[0], data_profile_0[1], 'rx')\n",
+    "plt.plot(data_profile_0[0], data_profile_0[1], \"rx\")\n",
     "plt.grid()\n",
     "plt.axis(\"equal\")"
    ]
@@ -621,8 +642,10 @@
     "        vector_start_end = self.point_end - self.point_start\n",
     "        normal = np.array([-vector_start_end[1], vector_start_end[0]], float)\n",
     "\n",
-    "        self._amplitude_vector = np.ndarray((2, 1), float, tf.normalize(normal)) * amplitude\n",
-    "        \n",
+    "        self._amplitude_vector = (\n",
+    "            np.ndarray((2, 1), float, tf.normalize(normal)) * amplitude\n",
+    "        )\n",
+    "\n",
     "    @property\n",
     "    def point_start(self):\n",
     "        return self._points[:, 0]\n",
@@ -638,8 +661,8 @@
     "\n",
     "        # normalized effective raster width\n",
     "        num_raster_segments = np.round(distance / raster_width)\n",
-    "        nerw = 1. / num_raster_segments\n",
-    "        \n",
+    "        nerw = 1.0 / num_raster_segments\n",
+    "\n",
     "        # linear interpolation of the points\n",
     "        weights = np.arange(0, 1 + 0.5 * nerw, nerw)\n",
     "        weight_matrix = np.array([1 - weights, weights])\n",
@@ -648,7 +671,7 @@
     "    def _calculate_offsets(self, num_raster_segments):\n",
     "        total_range = np.pi * self._num_half_waves\n",
     "        increment = total_range / num_raster_segments\n",
-    "        \n",
+    "\n",
     "        angles = np.arange(0, total_range + 0.5 * increment, increment)\n",
     "        return np.sin(angles) * self._amplitude_vector\n",
     "\n",
@@ -656,9 +679,7 @@
     "        points_on_line = self._calculate_points_on_line(raster_width)\n",
     "        offsets = self._calculate_offsets(points_on_line.shape[1] - 1)\n",
     "\n",
-    "        return points_on_line + offsets\n",
-    "\n",
-    "        "
+    "        return points_on_line + offsets"
    ]
   },
   {
@@ -686,7 +707,7 @@
     "\n",
     "\n",
     "# plot data\n",
-    "plt.plot(data_shape_11[0], data_shape_11[1], 'rx')\n",
+    "plt.plot(data_shape_11[0], data_shape_11[1], \"rx\")\n",
     "plt.grid()\n",
     "plt.axis(\"equal\")"
    ]
@@ -776,21 +797,21 @@
     "shape_12.add_line_segments([[10, 0], [5, -5], [0, 0]])\n",
     "\n",
     "# create translated copy\n",
-    "shape_13 = shape_12.translate([-14,7])\n",
+    "shape_13 = shape_12.translate([-14, 7])\n",
     "\n",
     "# create a distorted and translated copy\n",
     "shape_14 = shape_12.transform([[2, 0], [0, 0.5]])\n",
-    "shape_14.apply_translation([0,10])      \n",
+    "shape_14.apply_translation([0, 10])\n",
     "\n",
     "# create a rotated and translated copy\n",
     "s = np.sin(-np.pi / 4)\n",
     "c = np.cos(-np.pi / 4)\n",
     "shape_15 = shape_12.transform([[c, -s], [s, c]])\n",
-    "shape_15.apply_translation([25,10])      \n",
+    "shape_15.apply_translation([25, 10])\n",
     "\n",
     "# create a reflected copy\n",
-    "point_0 = [-5,0]\n",
-    "point_1 = [0,-10]\n",
+    "point_0 = [-5, 0]\n",
+    "point_1 = [0, -10]\n",
     "shape_16 = shape_12.reflect_across_line(point_0, point_1)\n",
     "\n",
     "\n",
@@ -802,13 +823,18 @@
     "data_shape_16 = shape_16.rasterize(0.25)\n",
     "\n",
     "# plot data\n",
-    "plt.plot(data_shape_12[0], data_shape_12[1], 'r', label=\"original\")\n",
-    "plt.plot(data_shape_13[0], data_shape_13[1], 'b', label=\"translated\")\n",
-    "plt.plot(data_shape_14[0], data_shape_14[1], 'g', label=\"distorted and translated\")\n",
-    "plt.plot(data_shape_15[0], data_shape_15[1], 'k', label=\"rotated and translated\")\n",
-    "plt.plot(data_shape_16[0], data_shape_16[1], 'm', label=\"reflected\")\n",
-    "plt.plot([point_0[0], point_1[0]], [point_0[1], point_1[1]], 'co', label=\"points\")\n",
-    "plt.plot([point_0[0], point_1[0]], [point_0[1], point_1[1]], 'y--', label=\"line of reflection\")\n",
+    "plt.plot(data_shape_12[0], data_shape_12[1], \"r\", label=\"original\")\n",
+    "plt.plot(data_shape_13[0], data_shape_13[1], \"b\", label=\"translated\")\n",
+    "plt.plot(data_shape_14[0], data_shape_14[1], \"g\", label=\"distorted and translated\")\n",
+    "plt.plot(data_shape_15[0], data_shape_15[1], \"k\", label=\"rotated and translated\")\n",
+    "plt.plot(data_shape_16[0], data_shape_16[1], \"m\", label=\"reflected\")\n",
+    "plt.plot([point_0[0], point_1[0]], [point_0[1], point_1[1]], \"co\", label=\"points\")\n",
+    "plt.plot(\n",
+    "    [point_0[0], point_1[0]],\n",
+    "    [point_0[1], point_1[1]],\n",
+    "    \"y--\",\n",
+    "    label=\"line of reflection\",\n",
+    ")\n",
     "plt.grid()\n",
     "plt.axis(\"equal\")\n",
     "plt.legend(loc=\"lower right\")"
