--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -34,26 +34,23 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "from mpl_toolkits.mplot3d import Axes3D  # noqa: F401 unused import\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "from weldx.transformations import LocalCoordinateSystem\n",
-    "from weldx.geometry import  (Geometry,\n",
-    "                             LinearHorizontalTraceSegment,\n",
-    "                             linear_profile_interpolation_sbs,\n",
-    "                             Profile,\n",
-    "                             RadialHorizontalTraceSegment,\n",
-    "                             Shape,\n",
-    "                             Trace,\n",
-    "                             VariableProfile\n",
-    "                             )\n",
-    "\n",
+    "import numpy as np\n",
+    "from mpl_toolkits.mplot3d import Axes3D  # noqa: F401 unused import\n",
     "\n",
     "import weldx.transformations as tf\n",
-    "from weldx import Q_"
+    "from weldx import Q_\n",
+    "from weldx.geometry import (\n",
+    "    Geometry,\n",
+    "    LinearHorizontalTraceSegment,\n",
+    "    Profile,\n",
+    "    RadialHorizontalTraceSegment,\n",
+    "    Shape,\n",
+    "    Trace,\n",
+    "    VariableProfile,\n",
+    "    linear_profile_interpolation_sbs,\n",
+    ")\n",
+    "from weldx.transformations import LocalCoordinateSystem"
    ]
   },
   {
@@ -110,9 +107,9 @@
    },
    "outputs": [],
    "source": [
-    "arc_segment = RadialHorizontalTraceSegment(radius=Q_(15, \"cm\"),\n",
-    "                                           angle=Q_(90, \"degree\"),\n",
-    "                                           clockwise=True)"
+    "arc_segment = RadialHorizontalTraceSegment(\n",
+    "    radius=Q_(15, \"cm\"), angle=Q_(90, \"degree\"), clockwise=True\n",
+    ")"
    ]
   },
   {
@@ -144,7 +141,7 @@
    },
    "outputs": [],
    "source": [
-    "trace = Trace([line_segment, arc_segment,line_segment])"
+    "trace = Trace([line_segment, arc_segment, line_segment])"
    ]
   },
   {
@@ -191,8 +188,10 @@
    },
    "outputs": [],
    "source": [
-    "lcs_rot = LocalCoordinateSystem(tf.WXRotation.from_euler(\"y\",Q_(45, \"degree\")).as_matrix())\n",
-    "trace_rot = Trace([line_segment, arc_segment,line_segment], lcs_rot)\n",
+    "lcs_rot = LocalCoordinateSystem(\n",
+    "    tf.WXRotation.from_euler(\"y\", Q_(45, \"degree\")).as_matrix()\n",
+    ")\n",
+    "trace_rot = Trace([line_segment, arc_segment, line_segment], lcs_rot)\n",
     "trace_rot.plot(raster_width=Q_(2, \"cm\"))"
    ]
   },
@@ -240,7 +239,9 @@
    },
    "outputs": [],
    "source": [
-    "shape_right = Shape().add_line_segments(Q_([[10, 8], [5, 8], [1, 2], [1, 0], [10, 0]], \"cm\"))\n",
+    "shape_right = Shape().add_line_segments(\n",
+    "    Q_([[10, 8], [5, 8], [1, 2], [1, 0], [10, 0]], \"cm\")\n",
+    ")\n",
     "shape_left = shape_right.reflect_across_line([0, 0], [0, 1])\n",
     "profile = Profile([shape_left, shape_right])\n",
     "profile.plot(raster_width=Q_(1, \"cm\"))"
@@ -267,9 +268,11 @@
    "outputs": [],
    "source": [
     "geometry = Geometry(profile=profile, trace=trace)\n",
-    "geometry.plot(profile_raster_width=Q_(0.25, \"cm\"),\n",
-    "              trace_raster_width=Q_(10, \"cm\"),\n",
-    "              show_wireframe=False)\n",
+    "geometry.plot(\n",
+    "    profile_raster_width=Q_(0.25, \"cm\"),\n",
+    "    trace_raster_width=Q_(10, \"cm\"),\n",
+    "    show_wireframe=False,\n",
+    ")\n",
     "trace.plot(raster_width=Q_(1, \"cm\"), axes=plt.gca(), fmt=\"r-\")"
    ]
   },
@@ -322,11 +325,15 @@
    },
    "outputs": [],
    "source": [
-    "shape_right_2 = Shape().add_line_segments(Q_([[10, 8], [5, 8], [5, 2], [5, 0], [10, 0]], \"cm\"))\n",
+    "shape_right_2 = Shape().add_line_segments(\n",
+    "    Q_([[10, 8], [5, 8], [5, 2], [5, 0], [10, 0]], \"cm\")\n",
+    ")\n",
     "shape_left_2 = shape_right_2.reflect_across_line([0, 0], [0, 1])\n",
     "profile_2 = Profile([shape_left_2, shape_right_2])\n",
     "\n",
-    "shape_right_3 = Shape().add_line_segments(Q_([[10, 12], [2, 12], [4, 4], [4, 0], [10, 0]], \"cm\"))\n",
+    "shape_right_3 = Shape().add_line_segments(\n",
+    "    Q_([[10, 12], [2, 12], [4, 4], [4, 0], [10, 0]], \"cm\")\n",
+    ")\n",
     "shape_left_3 = shape_right_3.reflect_across_line([0, 0], [0, 1])\n",
     "profile_3 = Profile([shape_left_3, shape_right_3])\n",
     "\n",
@@ -334,10 +341,7 @@
     "profile.plot(raster_width=Q_(1, \"cm\"), label=\"Profile 1\")\n",
     "profile_2.plot(raster_width=Q_(1, \"cm\"), label=\"Profile 2\", ax=plt.gca())\n",
     "profile_3.plot(raster_width=Q_(1, \"cm\"), label=\"Profile 3\", ax=plt.gca())\n",
-    "plt.gca().legend()\n",
-    "\n",
-    "\n",
-    "\n"
+    "plt.gca().legend()"
    ]
   },
   {
@@ -360,14 +364,14 @@
    },
    "outputs": [],
    "source": [
-    "v_profile = VariableProfile([profile_3, profile_2, profile],\n",
-    "                            [0, 40, 100],\n",
-    "                            [linear_profile_interpolation_sbs, linear_profile_interpolation_sbs]\n",
-    "                            )\n",
+    "v_profile = VariableProfile(\n",
+    "    [profile_3, profile_2, profile],\n",
+    "    [0, 40, 100],\n",
+    "    [linear_profile_interpolation_sbs, linear_profile_interpolation_sbs],\n",
+    ")\n",
     "\n",
-    "geometry_vp = Geometry(profile=v_profile,trace=trace)\n",
-    "geometry_vp.plot(profile_raster_width=Q_(0.25, \"cm\"),\n",
-    "                 trace_raster_width=Q_(8, \"cm\"))"
+    "geometry_vp = Geometry(profile=v_profile, trace=trace)\n",
+    "geometry_vp.plot(profile_raster_width=Q_(0.25, \"cm\"), trace_raster_width=Q_(8, \"cm\"))"
    ]
   },
   {
@@ -453,8 +457,9 @@
     "trace_custom_interp = Trace(LinearHorizontalTraceSegment(Q_(20, \"cm\")))\n",
     "geometry_custom_interp = Geometry(v_profile_custom_interp, trace_custom_interp)\n",
     "\n",
-    "geometry_custom_interp.plot(profile_raster_width=Q_(0.25, \"cm\"),\n",
-    "                            trace_raster_width=Q_(2, \"cm\"))"
+    "geometry_custom_interp.plot(\n",
+    "    profile_raster_width=Q_(0.25, \"cm\"), trace_raster_width=Q_(2, \"cm\")\n",
+    ")"
    ]
   },
   {
