--- a/tutorials/measurement_chain.ipynb
+++ b/tutorials/measurement_chain.ipynb
@@ -6,11 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx import Q_\n",
-    "from weldx import MathematicalExpression, TimeSeries\n",
-    "from weldx.measurement import MeasurementChain, Error, Signal, SignalSource, SignalTransformation, MeasurementEquipment\n",
+    "from pandas import TimedeltaIndex\n",
     "\n",
-    "from pandas import TimedeltaIndex"
+    "from weldx import Q_, MathematicalExpression, TimeSeries\n",
+    "from weldx.measurement import (\n",
+    "    Error,\n",
+    "    MeasurementChain,\n",
+    "    MeasurementEquipment,\n",
+    "    Signal,\n",
+    "    SignalSource,\n",
+    "    SignalTransformation,\n",
+    ")"
    ]
   },
   {
@@ -55,12 +61,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_1 = MeasurementChain.from_parameters(name=\"Temperature measurement chain 1\",\n",
-    "                                        source_name=\"Thermocouple 1\",\n",
-    "                                        source_error=Error(deviation=Q_(0.1, \"percent\")),\n",
-    "                                        output_signal_type=\"analog\",\n",
-    "                                        output_signal_unit=\"V\",\n",
-    "                                       )"
+    "mc_1 = MeasurementChain.from_parameters(\n",
+    "    name=\"Temperature measurement chain 1\",\n",
+    "    source_name=\"Thermocouple 1\",\n",
+    "    source_error=Error(deviation=Q_(0.1, \"percent\")),\n",
+    "    output_signal_type=\"analog\",\n",
+    "    output_signal_unit=\"V\",\n",
+    ")"
    ]
   },
   {
@@ -82,11 +89,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_1.create_transformation(name=\"AD conversion\", \n",
-    "                           error=None, \n",
-    "                           output_signal_type=\"digital\", \n",
-    "                           output_signal_unit=\"\"\n",
-    "                          )"
+    "mc_1.create_transformation(\n",
+    "    name=\"AD conversion\",\n",
+    "    error=None,\n",
+    "    output_signal_type=\"digital\",\n",
+    "    output_signal_unit=\"\",\n",
+    ")"
    ]
   },
   {
@@ -104,12 +112,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_1.create_transformation(name=\"Calibration\",\n",
-    "                           error=Error(Q_(0.4, \"percent\")),\n",
-    "                           func=MathematicalExpression(expression=\"a*x+b\", \n",
-    "                                                       parameters={\"a\": Q_(3, \"K\"),\n",
-    "                                                                   \"b\": Q_(273.15, \"K\")})\n",
-    "                          )"
+    "mc_1.create_transformation(\n",
+    "    name=\"Calibration\",\n",
+    "    error=Error(Q_(0.4, \"percent\")),\n",
+    "    func=MathematicalExpression(\n",
+    "        expression=\"a*x+b\", parameters={\"a\": Q_(3, \"K\"), \"b\": Q_(273.15, \"K\")}\n",
+    "    ),\n",
+    ")"
    ]
   },
   {
@@ -166,10 +175,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_2 = SignalSource(name=\"Source\",\n",
-    "                        error=Error(Q_(0.1,\"percent\")),\n",
-    "                        output_signal=Signal(signal_type=\"analog\", unit=\"V\")\n",
-    "                       )"
+    "source_2 = SignalSource(\n",
+    "    name=\"Source\",\n",
+    "    error=Error(Q_(0.1, \"percent\")),\n",
+    "    output_signal=Signal(signal_type=\"analog\", unit=\"V\"),\n",
+    ")"
    ]
   },
   {
@@ -185,8 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_2 = MeasurementChain(name=\"Measurement chain 2\", \n",
-    "                        source=source_2)\n",
+    "mc_2 = MeasurementChain(name=\"Measurement chain 2\", source=source_2)\n",
     "mc_2.plot()"
    ]
   },
@@ -203,13 +212,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transformation_3 = SignalTransformation(name=\"Transformation\",\n",
-    "                                        error=Error(Q_(1,\"percent\")),\n",
-    "                                        func=MathematicalExpression(expression=\"a*x+b\", \n",
-    "                                                                    parameters={\"a\": Q_(3, \"K/V\"),\n",
-    "                                                                                \"b\": Q_(273.15, \"K\")}),\n",
-    "                                        type_transformation=\"AD\"\n",
-    "                                       )"
+    "transformation_3 = SignalTransformation(\n",
+    "    name=\"Transformation\",\n",
+    "    error=Error(Q_(1, \"percent\")),\n",
+    "    func=MathematicalExpression(\n",
+    "        expression=\"a*x+b\", parameters={\"a\": Q_(3, \"K/V\"), \"b\": Q_(273.15, \"K\")}\n",
+    "    ),\n",
+    "    type_transformation=\"AD\",\n",
+    ")"
    ]
   },
   {
@@ -251,7 +261,9 @@
    "outputs": [],
    "source": [
     "source_eq = MeasurementEquipment(\"Source 2000\", sources=[source_2])\n",
-    "transformation_eq = MeasurementEquipment(\"Transformer X3\", transformations=[transformation_3])"
+    "transformation_eq = MeasurementEquipment(\n",
+    "    \"Transformer X3\", transformations=[transformation_3]\n",
+    ")"
    ]
   },
   {
@@ -417,9 +429,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_1.add_signal_data(TimeSeries(data=Q_([10, 15, 5],\"K\"),\n",
-    "                     time=TimedeltaIndex(data=[0, 2, 6],unit=\"s\"))\n",
-    "                    )"
+    "mc_1.add_signal_data(\n",
+    "    TimeSeries(data=Q_([10, 15, 5], \"K\"), time=TimedeltaIndex(data=[0, 2, 6], unit=\"s\"))\n",
+    ")"
    ]
   },
   {
@@ -453,11 +465,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_1.add_signal_data(data=TimeSeries(data=Q_([2, 3, 1],\"K\"),\n",
-    "                                     time=TimedeltaIndex(data=[0, 2, 6],unit=\"s\")\n",
-    "                                    ),\n",
-    "                     signal_source=\"Thermocouple 1\"\n",
-    "                    )"
+    "mc_1.add_signal_data(\n",
+    "    data=TimeSeries(\n",
+    "        data=Q_([2, 3, 1], \"K\"), time=TimedeltaIndex(data=[0, 2, 6], unit=\"s\")\n",
+    "    ),\n",
+    "    signal_source=\"Thermocouple 1\",\n",
+    ")"
    ]
   },
   {
