--- a/tutorials/timeseries_01.ipynb
+++ b/tutorials/timeseries_01.ipynb
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_constant.plot(time=t, marker='o')"
+    "ts_constant.plot(time=t, marker=\"o\")"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "source": [
     "ts = ts_step.interp_time(t)\n",
     "print(ts)\n",
-    "ts.plot(marker='o')"
+    "ts.plot(marker=\"o\")"
    ]
   },
   {
@@ -228,7 +228,7 @@
    "source": [
     "ts = ts_linear.interp_time(t)\n",
     "print(ts)\n",
-    "ts.plot(marker='o')"
+    "ts.plot(marker=\"o\")"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "source": [
     "ts = ts_linear.interp_time(t + pd.Timedelta(0.5, \"s\"))\n",
     "print(ts)\n",
-    "ts.plot(marker='o')"
+    "ts.plot(marker=\"o\")"
    ]
   },
   {
@@ -277,7 +277,7 @@
     "\n",
     "ts = ts_expr.interp_time(t)\n",
     "print(ts)\n",
-    "ts.plot(marker='o')"
+    "ts.plot(marker=\"o\")"
    ]
   },
   {
@@ -295,7 +295,7 @@
    "source": [
     "t2 = Q_(np.arange(101) * 100, \"ms\")\n",
     "ts = ts_expr.interp_time(t2)\n",
-    "ts.plot(marker='o')"
+    "ts.plot(marker=\"o\")"
    ]
   },
   {
@@ -319,7 +319,7 @@
     "ts_sine = TimeSeries(data=expr)\n",
     "\n",
     "ts = ts_sine.interp_time(pd.timedelta_range(start=\"0s\", end=\"10s\", freq=\"100ms\"))\n",
-    "ts.plot(marker='o')"
+    "ts.plot(marker=\"o\")"
    ]
   },
   {
@@ -363,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts.plot(marker='o')"
+    "ts.plot(marker=\"o\")"
    ]
   }
  ],
