--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -27,16 +27,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# necessary packages\n",
-    "import numpy as np\n",
+    "from copy import deepcopy\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# necessary packages\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "import weldx.transformations as tf\n",
-    "import weldx.visualization as vs\n",
     "import xarray as xr\n",
     "from mpl_toolkits.mplot3d import Axes3D  # noqa: F401 unused import\n",
-    "from copy import deepcopy"
+    "\n",
+    "import weldx.transformations as tf\n",
+    "import weldx.visualization as vs"
    ]
   },
   {
@@ -170,23 +172,31 @@
     "_, (ax_0_01, ax_1_01) = vs.new_3d_figure_and_axes(num_subplots=2, width=800, height=400)\n",
     "\n",
     "# first plot\n",
-    "vs.plot_coordinate_systems([(lcs_root_in_root, {\"color\":\"r\", \"label\":\"parent\"}), \n",
-    "                            (lcs_flange_in_root, {\"color\":\"g\", \"label\":\"flange\"}), \n",
-    "                            (lcs_specimen_in_root, {\"color\":\"y\", \"label\":\"specimen\"}), \n",
-    "                            (lcs_torch_in_root, {\"color\":\"b\", \"label\":\"torch\"})],\n",
-    "                           axes=ax_0_01,\n",
-    "                           limits=(-3, 3),\n",
-    "                           title=\"root system\")\n",
+    "vs.plot_coordinate_systems(\n",
+    "    [\n",
+    "        (lcs_root_in_root, {\"color\": \"r\", \"label\": \"parent\"}),\n",
+    "        (lcs_flange_in_root, {\"color\": \"g\", \"label\": \"flange\"}),\n",
+    "        (lcs_specimen_in_root, {\"color\": \"y\", \"label\": \"specimen\"}),\n",
+    "        (lcs_torch_in_root, {\"color\": \"b\", \"label\": \"torch\"}),\n",
+    "    ],\n",
+    "    axes=ax_0_01,\n",
+    "    limits=(-3, 3),\n",
+    "    title=\"root system\",\n",
+    ")\n",
     "\n",
     "\n",
     "# second plot\n",
-    "vs.plot_coordinate_systems([(lcs_root_in_torch, {\"color\":\"r\", \"label\":\"parent\"}), \n",
-    "                            (lcs_flange_in_torch, {\"color\":\"g\", \"label\":\"flange\"}), \n",
-    "                            (lcs_specimen_in_torch, {\"color\":\"y\", \"label\":\"specimen\"}), \n",
-    "                            (lcs_torch_in_torch, {\"color\":\"b\", \"label\":\"torch\"})],\n",
-    "                           axes=ax_1_01,\n",
-    "                           limits=(-3, 3),\n",
-    "                           title=\"torch system\")"
+    "vs.plot_coordinate_systems(\n",
+    "    [\n",
+    "        (lcs_root_in_torch, {\"color\": \"r\", \"label\": \"parent\"}),\n",
+    "        (lcs_flange_in_torch, {\"color\": \"g\", \"label\": \"flange\"}),\n",
+    "        (lcs_specimen_in_torch, {\"color\": \"y\", \"label\": \"specimen\"}),\n",
+    "        (lcs_torch_in_torch, {\"color\": \"b\", \"label\": \"torch\"}),\n",
+    "    ],\n",
+    "    axes=ax_1_01,\n",
+    "    limits=(-3, 3),\n",
+    "    title=\"torch system\",\n",
+    ")"
    ]
   },
   {
@@ -227,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csm.relabel({\"torch\":\"TCP\"})\n",
+    "csm.relabel({\"torch\": \"TCP\"})\n",
     "csm"
    ]
   },
@@ -237,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csm.relabel({\"TCP\":\"torch\"})"
+    "csm.relabel({\"TCP\": \"torch\"})"
    ]
   },
   {
@@ -255,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csm.add_cs(\"torch\", \"flange\", tf.LocalCoordinateSystem(coordinates=[0,0,-2]))"
+    "csm.add_cs(\"torch\", \"flange\", tf.LocalCoordinateSystem(coordinates=[0, 0, -2]))"
    ]
   },
   {
@@ -449,10 +459,10 @@
     "_, (ax_0_02, ax_1_02) = vs.new_3d_figure_and_axes(num_subplots=2, width=800, height=400)\n",
     "\n",
     "# first plot\n",
-    "csm.plot(title=\"root system\", limits=(-3,3), axes=ax_0_02)\n",
+    "csm.plot(title=\"root system\", limits=(-3, 3), axes=ax_0_02)\n",
     "\n",
     "# second plot\n",
-    "csm.plot(reference_system=\"torch\", title=\"torch system\", limits=(-3,3), axes=ax_1_02)"
+    "csm.plot(reference_system=\"torch\", title=\"torch system\", limits=(-3, 3), axes=ax_1_02)"
    ]
   },
   {
@@ -497,16 +507,16 @@
    "source": [
     "parent_time = pd.TimedeltaIndex([1, 6], \"D\")\n",
     "parent_coords = [[1, -1, 0], [0, -1, 0]]\n",
-    "parent_orientation = - tf.WXRotation.from_euler(\"z\",[0, np.pi / 2]).as_matrix()\n",
+    "parent_orientation = -tf.WXRotation.from_euler(\"z\", [0, np.pi / 2]).as_matrix()\n",
     "\n",
     "child_time = pd.TimedeltaIndex([2, 5], \"D\")\n",
     "child_coords = [0, 2, 0]\n",
-    "child_orientation = tf.WXRotation.from_euler(\"z\",[0, np.pi / 2]).as_matrix()\n",
+    "child_orientation = tf.WXRotation.from_euler(\"z\", [0, np.pi / 2]).as_matrix()\n",
     "\n",
     "\n",
     "childchild_time = pd.TimedeltaIndex([3, 4], \"D\")\n",
     "childchild_coords = [2, 0, 0]\n",
-    "childchild_orientation = tf.WXRotation.from_euler(\"z\",[0, np.pi / 2]).as_matrix()\n",
+    "childchild_orientation = tf.WXRotation.from_euler(\"z\", [0, np.pi / 2]).as_matrix()\n",
     "\n",
     "\n",
     "csm_tdp = tf.CoordinateSystemManager(\"root\")\n",
@@ -549,26 +559,18 @@
     "# default\n",
     "lcs_parent_in_root_default = csm_tdp.get_cs(\"parent\")\n",
     "lcs_child_in_root_default = csm_tdp.get_cs(\"child\", \"root\")\n",
-    "lcs_childchild_in_root_default = csm_tdp.get_cs(\n",
-    "    \"child child\", \"root\"\n",
-    ")\n",
+    "lcs_childchild_in_root_default = csm_tdp.get_cs(\"child child\", \"root\")\n",
     "\n",
     "# specific times\n",
     "time = pd.TimedeltaIndex([12 * (i + 1) for i in range(12)], \"H\")\n",
     "lcs_parent_in_root_time = csm_tdp.get_cs(\"parent\", time=time)\n",
     "lcs_child_in_root_time = csm_tdp.get_cs(\"child\", \"root\", time=time)\n",
-    "lcs_childchild_in_root_time = csm_tdp.get_cs(\n",
-    "    \"child child\", \"root\", time=time\n",
-    ")\n",
+    "lcs_childchild_in_root_time = csm_tdp.get_cs(\"child child\", \"root\", time=time)\n",
     "\n",
     "# reference system\n",
     "lcs_parent_in_root_ref = csm_tdp.get_cs(\"parent\", time=\"parent\")\n",
-    "lcs_child_in_root_ref = csm_tdp.get_cs(\n",
-    "    \"child\", \"root\", time=\"parent\"\n",
-    ")\n",
-    "lcs_childchild_in_root_ref = csm_tdp.get_cs(\n",
-    "    \"child child\", \"root\", time=\"parent\"\n",
-    ")"
+    "lcs_child_in_root_ref = csm_tdp.get_cs(\"child\", \"root\", time=\"parent\")\n",
+    "lcs_childchild_in_root_ref = csm_tdp.get_cs(\"child child\", \"root\", time=\"parent\")"
    ]
   },
   {
@@ -584,32 +586,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, (ax_0_tdp, ax_1_tdp, ax_2_tdp) = vs.new_3d_figure_and_axes(num_subplots=3, width=1000, height=400)\n",
+    "_, (ax_0_tdp, ax_1_tdp, ax_2_tdp) = vs.new_3d_figure_and_axes(\n",
+    "    num_subplots=3, width=1000, height=400\n",
+    ")\n",
     "\n",
     "\n",
-    "vs.plot_coordinate_systems([(lcs_parent_in_root_default, {\"color\":\"g\", \"label\":\"parent\"}), \n",
-    "                            (lcs_child_in_root_default, {\"color\":\"y\", \"label\":\"child\"}), \n",
-    "                            (lcs_childchild_in_root_default, {\"color\":\"b\", \"label\":\"child child\"}) ],\n",
-    "                           axes=ax_0_tdp,\n",
-    "                           title=\"default\",\n",
-    "                           limits=(-3, 3)\n",
-    "                          )\n",
+    "vs.plot_coordinate_systems(\n",
+    "    [\n",
+    "        (lcs_parent_in_root_default, {\"color\": \"g\", \"label\": \"parent\"}),\n",
+    "        (lcs_child_in_root_default, {\"color\": \"y\", \"label\": \"child\"}),\n",
+    "        (lcs_childchild_in_root_default, {\"color\": \"b\", \"label\": \"child child\"}),\n",
+    "    ],\n",
+    "    axes=ax_0_tdp,\n",
+    "    title=\"default\",\n",
+    "    limits=(-3, 3),\n",
+    ")\n",
     "\n",
-    "vs.plot_coordinate_systems([(lcs_parent_in_root_time, {\"color\":\"g\", \"label\":\"parent\"}), \n",
-    "                            (lcs_child_in_root_time, {\"color\":\"y\", \"label\":\"child\"}), \n",
-    "                            (lcs_childchild_in_root_time, {\"color\":\"b\", \"label\":\"child child\"}) ],\n",
-    "                           axes=ax_1_tdp,\n",
-    "                           title=\"specific times\",\n",
-    "                           limits=(-3, 3)\n",
-    "                          )\n",
+    "vs.plot_coordinate_systems(\n",
+    "    [\n",
+    "        (lcs_parent_in_root_time, {\"color\": \"g\", \"label\": \"parent\"}),\n",
+    "        (lcs_child_in_root_time, {\"color\": \"y\", \"label\": \"child\"}),\n",
+    "        (lcs_childchild_in_root_time, {\"color\": \"b\", \"label\": \"child child\"}),\n",
+    "    ],\n",
+    "    axes=ax_1_tdp,\n",
+    "    title=\"specific times\",\n",
+    "    limits=(-3, 3),\n",
+    ")\n",
     "\n",
-    "vs.plot_coordinate_systems([(lcs_parent_in_root_ref, {\"color\":\"g\", \"label\":\"parent\"}), \n",
-    "                            (lcs_child_in_root_ref, {\"color\":\"y\", \"label\":\"child\"}), \n",
-    "                            (lcs_childchild_in_root_ref, {\"color\":\"b\", \"label\":\"child child\"}) ],\n",
-    "                           axes=ax_2_tdp,\n",
-    "                           title= '\"parent\" as time reference',\n",
-    "                           limits=(-3, 3)\n",
-    "                          )\n"
+    "vs.plot_coordinate_systems(\n",
+    "    [\n",
+    "        (lcs_parent_in_root_ref, {\"color\": \"g\", \"label\": \"parent\"}),\n",
+    "        (lcs_child_in_root_ref, {\"color\": \"y\", \"label\": \"child\"}),\n",
+    "        (lcs_childchild_in_root_ref, {\"color\": \"b\", \"label\": \"child child\"}),\n",
+    "    ],\n",
+    "    axes=ax_2_tdp,\n",
+    "    title='\"parent\" as time reference',\n",
+    "    limits=(-3, 3),\n",
+    ")"
    ]
   },
   {
@@ -625,28 +638,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_new = pd.TimedeltaIndex([1, 3, 5], \"D\") \n",
+    "time_new = pd.TimedeltaIndex([1, 3, 5], \"D\")\n",
     "\n",
     "# default interpolation -------------------------\n",
     "csm_tdp_interp = csm_tdp.interp_time(time_new)\n",
     "\n",
     "assert np.all(csm_tdp_interp.get_cs(\"parent\").time == time_new)\n",
     "assert np.all(csm_tdp_interp.get_cs(\"child\").time == time_new)\n",
-    "assert np.all(\n",
-    "    csm_tdp_interp.get_cs(\"child child\").time == time_new\n",
-    ")\n",
+    "assert np.all(csm_tdp_interp.get_cs(\"child child\").time == time_new)\n",
     "\n",
     "# selective interpolation -----------------------\n",
-    "csm_tdp_interp = csm_tdp.interp_time(time_new, affected_coordinate_systems=[\"child\", \"child child\"])\n",
+    "csm_tdp_interp = csm_tdp.interp_time(\n",
+    "    time_new, affected_coordinate_systems=[\"child\", \"child child\"]\n",
+    ")\n",
     "\n",
-    "assert np.all(\n",
-    "    csm_tdp_interp.get_cs(\"parent\").time\n",
-    "    == csm_tdp.get_cs(\"parent\").time\n",
-    ")\n",
+    "assert np.all(csm_tdp_interp.get_cs(\"parent\").time == csm_tdp.get_cs(\"parent\").time)\n",
     "assert np.all(csm_tdp_interp.get_cs(\"child\").time == time_new)\n",
-    "assert np.all(\n",
-    "    csm_tdp_interp.get_cs(\"child child\").time == time_new\n",
-    ")\n",
+    "assert np.all(csm_tdp_interp.get_cs(\"child child\").time == time_new)\n",
     "\n",
     "# in place interpolation ------------------------\n",
     "csm_tdp_interp = deepcopy(csm_tdp)\n",
@@ -654,10 +662,7 @@
     "\n",
     "assert np.all(csm_tdp_interp.get_cs(\"parent\").time == time_new)\n",
     "assert np.all(csm_tdp_interp.get_cs(\"child\").time == time_new)\n",
-    "assert np.all(\n",
-    "    csm_tdp_interp.get_cs(\"child child\").time == time_new\n",
-    ")\n",
-    "\n"
+    "assert np.all(csm_tdp_interp.get_cs(\"child child\").time == time_new)"
    ]
   },
   {
