--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -38,19 +38,18 @@
     "\n",
     "from weldx import (\n",
     "    Q_,\n",
-    "    Geometry,\n",
-    "    LocalCoordinateSystem,\n",
     "    CoordinateSystemManager,\n",
+    "    Geometry,\n",
+    "    LinearHorizontalTraceSegment,\n",
+    "    LocalCoordinateSystem,\n",
     "    TimeSeries,\n",
     "    Trace,\n",
     "    WXRotation,\n",
     "    get_groove,\n",
     "    util,\n",
-    "    LinearHorizontalTraceSegment,\n",
     "    welding,\n",
     ")\n",
-    "\n",
-    "from weldx.welding.util import sine, lcs_coords_from_ts"
+    "from weldx.welding.util import lcs_coords_from_ts, sine"
    ]
   },
   {
@@ -173,7 +172,9 @@
     "\n",
     "coords = [tcp_start_point.magnitude, tcp_end_point.magnitude]\n",
     "\n",
-    "tcp_wire = LocalCoordinateSystem(coordinates=coords, orientation=rot, time=[t_start, t_end])"
+    "tcp_wire = LocalCoordinateSystem(\n",
+    "    coordinates=coords, orientation=rot, time=[t_start, t_end]\n",
+    ")"
    ]
   },
   {
@@ -326,7 +327,7 @@
     "    show_origins=False,\n",
     "    show_vectors=False,\n",
     "    show_wireframe=True,\n",
-    "    time = t,\n",
+    "    time=t,\n",
     ")\n",
     "ax_setup(ax)"
    ]
@@ -351,7 +352,7 @@
     "    show_origins=False,\n",
     "    show_vectors=False,\n",
     "    show_wireframe=False,\n",
-    "    time = t,\n",
+    "    time=t,\n",
     ")\n",
     "ax_setup(ax)"
    ]
@@ -531,9 +532,7 @@
    "outputs": [],
    "source": [
     "t_interp = pd.timedelta_range(\n",
-    "    start=tcp_wire.time[0], \n",
-    "    end=tcp_wire.time[-1], \n",
-    "    freq=\"20ms\"\n",
+    "    start=tcp_wire.time[0], end=tcp_wire.time[-1], freq=\"20ms\"\n",
     ")"
    ]
   },
