--- a/tutorials/weldxfile.ipynb
+++ b/tutorials/weldxfile.ipynb
@@ -17,9 +17,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx import WeldxFile\n",
+    "from datetime import datetime\n",
+    "\n",
     "import numpy as np\n",
-    "from datetime import datetime"
+    "\n",
+    "from weldx import WeldxFile"
    ]
   },
   {
@@ -56,8 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {\"data_sets\": {\"first\": np.random.random(100),\n",
-    "                      \"time\": datetime.now()}}"
+    "data = {\"data_sets\": {\"first\": np.random.random(100), \"time\": datetime.now()}}"
    ]
   },
   {
@@ -90,8 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = WeldxFile(tree=data,\n",
-    "                 mode=\"rw\")\n",
+    "file = WeldxFile(tree=data, mode=\"rw\")\n",
     "file"
    ]
   },
@@ -117,8 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file[\"data_sets\"][\"second\"] =  {\"data\": np.random.random(100),\n",
-    "                                \"time\": datetime.now()}\n",
+    "file[\"data_sets\"][\"second\"] = {\"data\": np.random.random(100), \"time\": datetime.now()}\n",
     "\n",
     "# delete the first data set again:\n",
     "del file[\"data_sets\"][\"first\"]\n",
@@ -208,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example = WeldxFile(\"example.asdf\", mode='rw')\n",
+    "example = WeldxFile(\"example.asdf\", mode=\"rw\")\n",
     "display(example)\n",
     "example.close()"
    ]
@@ -238,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with WeldxFile(\"example.asdf\", mode='rw') as example:\n",
+    "with WeldxFile(\"example.asdf\", mode=\"rw\") as example:\n",
     "    example[\"updated\"] = True\n",
     "    fh = example.file_handle\n",
     "    # now the context ends, and the file is being saved to disk again.\n",
@@ -336,7 +335,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "software = dict(name=\"my_tool\", version=\"1.0\", homepage=\"https://my_tool.org\", author=\"the crowd\")\n",
+    "software = dict(\n",
+    "    name=\"my_tool\", version=\"1.0\", homepage=\"https://my_tool.org\", author=\"the crowd\"\n",
+    ")\n",
     "with WeldxFile(filename_hist, mode=\"rw\", software_history_entry=software) as file:\n",
     "    file[\"some\"] = \"changes\"\n",
     "    file.add_history_entry(\"added more changes\")"
@@ -419,6 +420,7 @@
    "outputs": [],
    "source": [
     "from weldx.asdf.cli.welding_schema import single_pass_weld_example\n",
+    "\n",
     "_, single_pass_weld_data = single_pass_weld_example(out_file=None)\n",
     "display(single_pass_weld_data[\"process\"])"
    ]
@@ -441,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "WeldxFile(tree=single_pass_weld_data, custom_schema=schema, mode='rw')"
+    "WeldxFile(tree=single_pass_weld_data, custom_schema=schema, mode=\"rw\")"
    ]
   },
   {
@@ -462,7 +464,7 @@
     "\n",
     "# now create the file again, and see what happens:\n",
     "try:\n",
-    "    WeldxFile(tree=single_pass_weld_data, custom_schema=schema, mode='rw')\n",
+    "    WeldxFile(tree=single_pass_weld_data, custom_schema=schema, mode=\"rw\")\n",
     "except Exception as e:\n",
     "    display(e)"
    ]
@@ -485,7 +487,7 @@
     "\n",
     "# now create the file again, and see what happens:\n",
     "try:\n",
-    "    WeldxFile(tree=single_pass_weld_data, custom_schema=schema, mode='rw')\n",
+    "    WeldxFile(tree=single_pass_weld_data, custom_schema=schema, mode=\"rw\")\n",
     "except Exception as e:\n",
     "    display(e)"
    ]
