--- a/tutorials/GMAW_process.ipynb
+++ b/tutorials/GMAW_process.ipynb
@@ -42,9 +42,9 @@
     "# Note: For some reasons, using integers in Q_ fails upon ASDF reading !\n",
     "params_spray = dict(\n",
     "    wire_feedrate=Q_(10.0, \"m/min\"),\n",
-    "    voltage=TS(data=Q_([40.0,20.0], \"V\"),time=Q_([0.0,10.0],\"s\")),\n",
+    "    voltage=TS(data=Q_([40.0, 20.0], \"V\"), time=Q_([0.0, 10.0], \"s\")),\n",
     "    impedance=Q_(10.0, \"percent\"),\n",
-    "    characteristic=Q_(5,\"V/A\"),\n",
+    "    characteristic=Q_(5, \"V/A\"),\n",
     ")\n",
     "process_spray = GmawProcess(\n",
     "    \"spray\", \"CLOOS\", \"Quinto\", params_spray, tag=\"CLOOS/spray_arc\"\n",
