start units refactor

--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -149,7 +149,7 @@
     "current_source = msm.SignalSource(\n",
     "    name=\"Current sensor\",\n",
     "    error=msm.Error(Q_(0.1, \"percent\")),\n",
-    "    output_signal=msm.Signal(signal_type=\"analog\", unit=\"V\"),\n",
+    "    output_signal=msm.Signal(signal_type=\"analog\", units=\"V\"),\n",
     ")\n",
     "\n",
     "HKS_sensor.sources.append(current_source)"
@@ -360,7 +360,7 @@
     "voltage_source = msm.SignalSource(\n",
     "    name=\"Voltage sensor\",\n",
     "    error=msm.Error(Q_(0.1, \"percent\")),\n",
-    "    output_signal=msm.Signal(signal_type=\"analog\", unit=\"V\"),\n",
+    "    output_signal=msm.Signal(signal_type=\"analog\", units=\"V\"),\n",
     ")\n",
     "\n",
     "HKS_sensor.sources.append(voltage_source)\n",
@@ -525,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
