--- a/tutorials/measurement_chain.ipynb
+++ b/tutorials/measurement_chain.ipynb
@@ -178,7 +178,7 @@
     "source_2 = SignalSource(\n",
     "    name=\"Source\",\n",
     "    error=Error(Q_(0.1, \"percent\")),\n",
-    "    output_signal=Signal(signal_type=\"analog\", unit=\"V\"),\n",
+    "    output_signal=Signal(signal_type=\"analog\", units=\"V\"),\n",
     ")"
    ]
   },
@@ -584,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
