delegate Time function calls to pandas.Index (#503)
* add __getattr__ to Time, update tests and methods

* __getitem__ returns Time

* fix

* update doctests

* update notebook

* update CHANGELOG.md

* update docstring

Co-authored-by: vhirtham <volker.hirthammer@bam.de>

--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -532,7 +532,7 @@
    "outputs": [],
    "source": [
     "t_interp = pd.timedelta_range(\n",
-    "    start=tcp_wire.time[0], end=tcp_wire.time[-1], freq=\"20ms\"\n",
+    "    start=tcp_wire.time.index[0], end=tcp_wire.time.index[-1], freq=\"20ms\"\n",
     ")"
    ]
   },
